--- a/package.json
+++ b/package.json
@@ -30,12 +30,7 @@
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
     "pm2": "^5.4.2",
-    "undici": "^6.19.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "nodemon": "^3.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "undici": "^6.19.2"
   },
   "homepage": "https://github.com/notqaltx/Nowadays-Bot#readme",
   "devDependencies": {
